tried to fix edit form so current info wraps

--- a/public/stylesheets/bird_sightings.css
+++ b/public/stylesheets/bird_sightings.css
@@ -1,4 +1,4 @@
-/* --- styles for new bird form --- */
+/* --- styles for new/edit bird forms --- */
   
   .flex-outer li{
     display: flex;
@@ -13,18 +13,21 @@
 
   .flex-outer li label, .flex-outer li .currentInfo {
     padding: 8px;
-    flex: 1 0 120px;
+    flex-grow: 1;
+    flex-wrap: wrap;
     max-width: 25%;
   }
   
   .flex-outer > li > label + *, .flex-outer > li > .currentInfo + *{
-    flex: 1 0 220px;
+    flex-grow: 1;
+    flex-wrap: wrap;
   }
 
   .flex-outer li input,
   .flex-outer li textarea {
     padding: 15px;
     border: none;
+    flex-grow: 2;
   }
   
   .flex-outer li button {
@@ -59,8 +62,8 @@
   }
 
   img.show{
-    max-width: 50%;
-    max-height: 50%;
+    max-width: 40%;
+    max-height: 40%;
 }
 
   .grid-item img {
